--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "animate-on-scroll": "^1.2.5",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
     "next": "15.0.3",
+    "owl.carousel": "^2.3.4",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
