--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@vercel/analytics": "^1.4.0",
     "animate-on-scroll": "^1.2.5",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
